--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,39 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:background="@drawable/mig">
 
     <TextView
+            android:text="Snap In"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:id="@+id/appNameTextView"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="68dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="60sp" android:fontFamily="@font/give_you_glory" android:textColor="@android:color/black"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/emailEditText" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/appNameTextView" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent" android:hint="Email"
+            android:inputType="textEmailAddress"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/passwordEditText" android:layout_marginTop="21dp"
+            app:layout_constraintTop_toBottomOf="@+id/emailEditText" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            android:inputType="textPassword" android:hint="Password"/>
+    <Button
+            android:text="login/Signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/loginButton" android:layout_marginTop="37dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="loginClicked"/>
 </android.support.constraint.ConstraintLayout>
