--- a/app/src/main/res/layout/activity_create_snap.xml
+++ b/app/src/main/res/layout/activity_create_snap.xml
@@ -12,7 +12,7 @@
             android:layout_height="48dp"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText" app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/messageeditText" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="30dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:hint="Message"/>
@@ -20,18 +20,18 @@
             android:layout_width="365dp"
             android:layout_height="290dp" tools:srcCompat="@tools:sample/backgrounds/scenic[12]"
             android:id="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/messageeditText" android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="14dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="14dp" android:scaleType="centerCrop"/>
     <Button
-            android:text="Button"
+            android:text="Camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cameraButton" android:layout_marginTop="13dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
     <Button
-            android:text="Button"
+            android:text="Next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/nextButton" android:layout_marginTop="7dp"
